syntax = "proto3";

option java_package = "enchantedtowers.common.utils.proto.requests";
option java_multiple_files = true;

package request_models;

message RegistrationRequest {
  string email = 1;
  string password = 2;
  string confirmationPassword = 3;
  string username = 4;
};
